--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ button {
     margin-bottom: 20px;
     font-size: 30px;
     font-weight: 700; 
-    text-align: center;
+    text-align: right;
 }
 
 form{
