--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ button {
     margin-bottom: 20px;
     font-size: 30px;
     font-weight: 700;
-    /*text-align: center;*/
+    text-align: center;
 }
 
 form {
@@ -33,8 +33,7 @@ form {
 .formHeader {
 
     margin: 50px 0px 0;
-    background-color: coral;
-    /*border-radius: 5px;    */
+    background-color: coral;    
     height: 40px;
     display: flex;
     align-items: center;
